# stockm2

./: .gitignore  .stockm2_assumption_presets.json  .stockm2_records.db  MODERNIZATION_PLAN.md  README.md  pyproject.toml
archive/legacy_quickfs/: README.md
docs/: api-provider-evaluation.md  backtesting.md  legacy-buffett-model.md  legacy-data-sources.md
graham_model/: README.md
greenblatt_model/: README.md
src/stockm2/: __init__.py  cli.py
src/stockm2/backtesting/: simple.py
src/stockm2/data/: __init__.py
src/stockm2/data/providers/: base.py  fixture.py  fmp.py  sec_yahoo.py
src/stockm2/models/: buffett.py
src/stockm2/ui/: app.py  cache.py  presets.py
tests/: test_assumption_presets.py  test_buffett_cli.py  test_buffett_model_legacy_behavior.py  test_stock_cache.py  test_ticker_presets.py
tests/fixtures/: buffett_inputs.json
