[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockm2"
version = "0.1.0"
description = "Modernized Buffett-style stock valuation toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
stockm2 = "stockm2.cli:main"
stockm2-ui = "stockm2.ui.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
